--- a/반복문.ipynb
+++ b/반복문.ipynb
@@ -6,7 +6,7 @@
       "name": "반복문.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4cz+HYdjkEfx8WA23gBmV",
+      "authorship_tag": "ABX9TyObQUd3BGk81OI5emAmd2he",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -456,6 +456,42 @@
             "9 * 8 = 72\n",
             "9 * 9 = 81\n",
             "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "doRh2DYKJgHO",
+        "outputId": "f0d51a93-29ed-4eff-ba98-18652b8dbe67"
+      },
+      "source": [
+        "n = int(input())\n",
+        "\n",
+        "\n",
+        "for i in range(1,10):\n",
+        "  print(n,'*',i,'=', n*i)"
+      ],
+      "execution_count": 85,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "5 * 1 = 5\n",
+            "5 * 2 = 10\n",
+            "5 * 3 = 15\n",
+            "5 * 4 = 20\n",
+            "5 * 5 = 25\n",
+            "5 * 6 = 30\n",
+            "5 * 7 = 35\n",
+            "5 * 8 = 40\n",
+            "5 * 9 = 45\n"
           ]
         }
       ]
