--- a/데이터타입.ipynb
+++ b/데이터타입.ipynb
@@ -6,7 +6,7 @@
       "name": "데이터타입.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPcAbjKkkDSXb9YEi25fO7X",
+      "authorship_tag": "ABX9TyMsD07VZtRH3S+Mfmm0/rP4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,7 +577,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "RisPQuuG5dl7"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RisPQuuG5dl7",
+        "outputId": "26beb787-bfcd-4105-f5cc-504dc6c733c7"
       },
       "source": [
         "a = 4\n",
@@ -587,12 +591,21 @@
         "#b = a\n",
         "#a = temp\n",
         "\n",
-        "a,b = b,a"
+        "a,b = b,a\n",
+        "print(a)\n",
+        "print(b)"
       ],
-      print(a)
-      print(b)
-      "execution_count": 65,
-      "outputs": []
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n"
+          ]
+        }
+      ]
     }
   ]
 }
